<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/register_layout_padding_horizontal"
    android:paddingTop="@dimen/register_layout_padding_top">

    <ImageButton
        android:id="@+id/register2_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/back_button_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/register2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/register_register_activity"
        android:textSize="@dimen/register_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register2_back_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        style="@style/Custom.Text.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:hint="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register2_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="@style/Widget.Material3.MaterialTimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_button_margin_top"
        android:backgroundTint="@color/black"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/register_button_font_size_second_activity"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/register_button_stroke_width"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_marginTop="@dimen/terms_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="@dimen/terms_font_size"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

</androidx.constraintlayout.widget.ConstraintLayout>