<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/log_in_layout_padding_horizontal"
    android:paddingTop="@dimen/log_in_layout_padding_top">

    <ImageButton
        android:id="@+id/back_button_log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/back_button_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/log_in_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/log_in_margin_top"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/log_in_log_in_layout"
        android:textSize="@dimen/log_in_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button_log_in_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_field_layout_log_in_activity"
        style="@style/Custom.Text.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/log_in_email_input_margin_top"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_textview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_field_input_log_in_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field_layout_log_in_activity"
        style="@style/Custom.Text.Field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_field_margin_top"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text_field_layout_log_in_activity"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field_input_log_in_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/log_in_button_log_in_activity"
        style="@style/Widget.Material3.MaterialTimePicker.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/log_in_button_margin_top_log_in_activity"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/log_in_button_text_size_log_in_activity"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_layout_log_in_activity"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/log_in_button_stroke_width_log_in_activity"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>